<resources>
    <string name="app_name">Engineering Smart Book</string>
    <string name="splash_title">Discover Your Knowledge</string>
    <string name="splash_contain">This is an app you just scan qr code on book and get more lecture on this topic. If you don\'s have a book then click by book button</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="linkdin_icon">Linkdin Icon</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="remember_me_login">Remember me</string>
    <string name="password_hints">Password</string>
    <string name="phone_number_hints">Phone Number</string>
    <string name="logo_esb">Logo ESB</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="btn_next_splash">Next</string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="app_short_name">ESB</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="reset_confirmation_code">Resend Confirmation Code</string>
    <string name="sample_timer">00:29</string>
    <string name="otp_code">OTP Code</string>
    <string name="verification_code_sent_to">Verification code sent to:</string>
    <string name="sample_phone_number">017 55005500</string>
    <string name="app_bar_home_button">App bar home button</string>
    <string name="engineering">Engineering</string>
    <string name="smart_book">Smart Book</string>
    <string name="successfully">Successfully</string>
    <string name="you_are_done_to_enrolled_this_book">You are done to enrolled this book.</string>
    <string name="now_you_can_access_the_video_topics">Now you can access the video topics</string>
    <string name="btn_text_get_this_course">Get this Course</string>
    <string name="book_access">Book Access</string>
    <string name="btn_apply">Apply</string>
    <string name="what_is_it">What is it?</string>
    <string name="book_serial_number">Book Serial Number</string>
    <string name="demo_user">Mr. Mehedi Hssan</string>
    <string name="sample_email_address">username@mail.com</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_books">Your Books</string>
    <string name="books_cover">Books cover</string>
    <string name="all">All</string>
    <string name="recent_view">Recent View</string>
    <string name="store">Store</string>
    <string name="your_access_books">Your Access Books</string>
    <string name="free_video">Free Video</string>
    <string name="promo">Promo</string>
    <string name="your_order">Your Order</string>
    <string name="_40">40%</string>
    <string name="_460">460</string>
    <string name="no_of_sold">No of Sold</string>
    <string name="total_time">Total Time</string>
    <string name="get_access">Get Access</string>
    <string name="order_now">Order Now</string>
    <string name="_20_topics">20 topics</string>
    <string name="_40_s_video_lecture">40\'s video lecture</string>
    <string name="_40_hours">40 hours</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="your_name">Your Name</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="book_title">Lorem Ipsum Book Name and books</string>
    <string name="payment_info">যেকোন একটি পেমেন্ট মেথড থেকে পেমেন্ট করার পরে, আপনার ট্রানজেকশন আইডিটি ইনপুট ফিল্ডে প্রদান করুন।</string>
    <string name="pay_later">পেমেন্ট পরে করবেন</string>
    <string name="payment_methods_we_are_accept">Payment methods we are accept</string>
    <string name="personal_number">Personal Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_button">Scan button</string>
    <string name="todo">TODO</string>
    <string name="verify_your_phone">Verify your Phone</string>
    <string name="send_otp_again">Send OTP Again</string>
    <string name="all_books">All Books</string>
    <string name="help">Help</string>
    <string name="_4">4%</string>
    <string name="taka">৳</string>
    <string name="book_description">Book Description</string>
    <string name="topic_1">Topic 1:</string>
    <string name="loren_ipsum_topic_name">Loren Ipsum Topic Name</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="book_topics">Book Topics</string>
    <string name="real_phone_number">01629473639</string>
    <string name="rocket">016294736393</string>


    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="youtube_link"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="open_image">open image</string>
    <string name="timer">--:--</string>
    <string name="topics_title">Topics Title</string>
    <string name="app_email">engineeringsmartbook@gmail.com</string>

</resources>