<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:screenOrientation="portrait"
    tools:context=".ui.main.view.auth.OtpVerify">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_white_round"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="50dp"
            android:src="@drawable/logo_esb"
            android:contentDescription="@string/logo_esb" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text25"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/verify_your_phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/text15"
                android:text="@string/verification_code_sent_to"/>

            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text15"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/sample_phone_number"/>

        </LinearLayout>


        <EditText
            android:id="@+id/txtOtpCode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button_shave_white_round"
            android:hint="@string/otp_code"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/text18"
            tools:ignore="TextContrastCheck" />



        <Button
            android:id="@+id/btnConfirmCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button_shape_corner_round"
            android:text="@string/confirm_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text25" />

        <LinearLayout
            android:id="@+id/pnlTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/text15"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/sample_timer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text15"
                android:text="@string/reset_confirmation_code"/>

        </LinearLayout>

        <Button
            android:visibility="invisible"
            android:id="@+id/btnSendOtpAgain"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="-50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/bg_button_shave_white_round"
            android:text="@string/send_otp_again"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="@dimen/text20"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <include
        layout="@layout/layout_footer_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:visibility="gone"
        android:id="@+id/loader"
        layout="@layout/layout_loader"/>


</androidx.constraintlayout.widget.ConstraintLayout>