<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.main.view.fragment.BookAccessFragment">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_access"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/text30"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/book_access"
            android:src="@drawable/ic_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/now_you_can_access_the_video_topics"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtBookSerial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/bg_button_shave_white_round"
            android:hint="@string/book_serial_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/bg_button_shape_corner_round"
            android:text="@string/btn_apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text20"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/successfully"
            android:src="@drawable/ic_qu_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_it"
            android:textColor="#546E7A"
            android:textSize="@dimen/text15" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>