<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.BookEnrollment">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        app:layout_constraintBottom_toTopOf="@+id/appBar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_access"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/text30"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_line"
                android:contentDescription="@string/book_access" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/now_you_can_access_the_video_topics"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/book_serial_number"
                android:textAlignment="center"
                android:background="@drawable/bg_button_shave_white_round"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/btn_apply"
                android:background="@drawable/bg_button_shape_corner_round"
                android:textColor="@color/white"
                android:textSize="@dimen/text20"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_qu_mark"
                android:contentDescription="@string/successfully" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_it"
                android:textColor="@color/primary"
                android:textSize="@dimen/text15"/>

        </LinearLayout>

    </LinearLayout>


    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>