<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="69dp">

    <LinearLayout
        android:id="@+id/titleBarHeading"
        android:visibility="invisible"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/logo_esb"
            android:contentDescription="@string/app_bar_home_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engineering"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="22sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/smart_book"
                android:textStyle="bold"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBackMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_arrow_round_back"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnNotificationsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_notifications"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>