<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imgVideoThus"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/books_cover"
            android:src="@drawable/ic_success_mark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtVideoTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_20_topics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgVideoThus"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgVideoThus2"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/books_cover"
            android:src="@drawable/ic_success_mark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtVideoTitle"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtVideoTitle2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_40_s_video_lecture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgVideoThus2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgVideoThus3"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/books_cover"
            android:src="@drawable/ic_success_mark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtVideoTitle2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtVideoTitle3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_40_hours"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgVideoThus3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>